--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/axios": "^5.12.5",
     "core-js": "^3.8.3",
     "direct-vuex": "^0.12.1",
+    "firebase": "^8.2.6",
     "nuxt": "^2.14.12",
     "nuxt-property-decorator": "^2.9.1"
   },
