--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "direct-vuex": "^0.12.1",
     "firebase": "^8.2.6",
     "nuxt": "^2.14.12",
-    "nuxt-property-decorator": "^2.9.1"
+    "nuxt-property-decorator": "^2.9.1",
+    "vue-timeago": "^5.1.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.14.12",
